[gd_scene load_steps=10 format=2]

[ext_resource path="res://MouseAndButtons/Graphics/22.png" type="Texture" id=1]
[ext_resource path="res://MouseAndButtons/Graphics/23.png" type="Texture" id=2]
[ext_resource path="res://Themes And Styles/DialogBoxFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://MouseAndButtons/GameInfoDialog.gd" type="Script" id=4]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 172, 74 )
margin_left = 3.15558
margin_right = 2.99781
margin_top = 18.3024
margin_bottom = 2.99781

[sub_resource type="Theme" id=2]
Panel/styles/panel = SubResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "Bobble"
length = 8.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("GameInfoDialogBox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -1, 1 ), Vector2( -1, 4 ), Vector2( -1, 7 ), Vector2( -0.65, 4 ), Vector2( -0.35, 1 ), Vector2( 0, -2 ), Vector2( 0, -1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 28, 14 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 86, 37 )

[node name="GameInfoDialog" type="Node2D" groups=[
"interactable",
]]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="GameInfoDialogBox" type="Node2D" parent="."]
position = Vector2( -0.65, 4 )

[node name="Panel" type="Panel" parent="GameInfoDialogBox"]
margin_left = -116.0
margin_top = 33.0
margin_right = 56.0
margin_bottom = 107.0
rect_min_size = Vector2( 172, 74 )
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GameInfoDialogBox/Panel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 3.0
margin_top = -2.0
margin_right = -3.00002
margin_bottom = 15.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "GAME_INFO_PRESS_HERE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Bobble"
anims/Bobble = SubResource( 3 )

[node name="InputArea" type="Area2D" parent="."]
position = Vector2( -1, 1 )

[node name="BoobleOff" type="CollisionShape2D" parent="InputArea"]
position = Vector2( 29.0297, 12.642 )
shape = SubResource( 4 )

[node name="BoobleOn" type="CollisionShape2D" parent="InputArea"]
position = Vector2( -29.6985, 73.0088 )
shape = SubResource( 5 )
[connection signal="mouse_entered" from="InputArea" to="." method="_mouse_entered"]
[connection signal="mouse_exited" from="InputArea" to="." method="_mouse_exited"]
